--- a/app/index.html
+++ b/app/index.html
@@ -417,5 +417,8 @@
       });
     </script>
 
+    <!--Metrics-->
+    <script type="text/javascript" src="//www.cisco.com/web/fw/m/metrics.min.js"></script>
+
 </body>
 </html>
