--- a/app/index.html
+++ b/app/index.html
@@ -53,89 +53,8 @@
     <!--[if gt IE 9]>
       <link rel="stylesheet" type="text/css" href="styles/ie/10.css">
     <![endif]-->
-
-    <style type="text/css">
-      /*this is a temporary fix until the prod framework can be updated.*/
-      #fw-mb-w1 #framework-content-main { margin-top:0; }
-      #fw-mb-w1 #framework-footer { margin-bottom:12px; }
-    </style>
-    <script>cdc.ut.config.set("send", {ntpagetag:true});</script>
-    <script type="text/javascript">cdc.util.useBackpack=true;</script>
   </head>
-  <body id="w1x" class="cdc-fw cdc-vkit"><!--googleoff: index--><!--googleoff: snippet -->
-  <!--[if gte IE 9]><div id="gte-ie9" class="ie"><![endif]-->
-  <!--[if IE 8]><div id="ie8" class="ie"><![endif]-->
-  <!--[if IE 7]><div id="ie7" class="ie ie67"><![endif]-->
-  <!--[if lte IE 6]><div id="ie6" class="ie ie67"><![endif]--> 
-  <div id="fw-mb">
-    <div id="fw-mb-w1">
-
-      <!-- begin: masterbrand banner -->
-      <div id="fw-banner">
-        <div id="fw-banner-w1">
-
-          <!-- skiplinks -->
-          <div id="fw-mbsk">
-            <p><a href="http://www.cisco.com" tabindex="3">Home</a> <a href="#content">Skip to content</a> <a href="#hinav">Skip to navigation</a> <a href="#pagefooter">Skip to footer</a></p>
-          </div>
-
-          <!-- logo -->
-          <div id="fw-mbl">
-            <p><a href="http://www.cisco.com">Cisco.com Worldwide Home</a></p>
-          </div>
-
-          <!-- megamenus -->
-          <div id="fw-mm">
-            <table class="mm-items" cellspacing="0" summary="">
-              <tr>
-                <td class="mm-item" id="products-mm-item"><a href="http://www.cisco.com/en/US/products/index.html" class="mm-link">Products &amp; Services</a> <a href="//www.cisco.com/web/fw/co/painted-menu-content.html#products-mm-menu" class="mm-reflink">(menu)</a> </td>
-                <td class="mm-item" id="support-mm-item"><a href="http://www.cisco.com/cisco/web/support/index.html" class="mm-link">Support</a> <a href="//www.cisco.com/web/fw/co/painted-menu-content.html#support-mm-menu" class="mm-reflink">(menu)</a> </td>
-                <td class="mm-item" id="ordering-mm-item"><a href="http://www.cisco.com/en/US/ordering/index.shtml" class="mm-link">How to Buy</a> <a href="//www.cisco.com/web/fw/co/painted-menu-content.html#ordering-mm-menu" class="mm-reflink">(menu)</a> </td>
-                <td class="mm-item" id="training-mm-item"><a href="http://www.cisco.com/en/US/learning/index.html" class="mm-link">Training &amp; Events</a> <a href="//www.cisco.com/web/fw/co/painted-menu-content.html#training-mm-menu" class="mm-reflink">(menu)</a> </td>
-                <td class="mm-item" id="partner-mm-item"><a href="http://www.cisco.com/en/US/partners/index.html" class="mm-link">Partners</a> <a href="//www.cisco.com/web/fw/co/painted-menu-content.html#partner-mm-menu" class="mm-reflink">(menu)</a> </td>
-              </tr>
-            </table>
-          </div>
-          <!-- end #fw-mm -->
-
-          <!-- search -->
-          <span class="search-entitlement">Guest</span> 
-          <div id="fw-mbs">
-            <form name="sitewidesearch" action="http://tools.cisco.com/search/JSP/search-results.get" method="get" id="sitewidesearch"><label for="searchPhrase" name="search" id="search">Search</label> 
-            <p class="field-button"><input type="text" tabindex="1" name="strQueryText" class="field-button-field" id="searchPhrase" value="" autocomplete="off"> <input type="submit" tabindex="2" value="Search" class="field-button-button" id="go"></p>
-            <input type="hidden" value="cisco.com" name="Search All cisco.com"> <input type="hidden" value="en" name="language"> <input type="hidden" value="US" name="country"> <input type="hidden" value="f" name="thissection"> <input type="hidden" value="Guest" name="accessLevel"></form>
-          </div><!-- end #fw-mbs -->
-          <script type="text/javascript">
-            if ((typeof cdc.search) == "undefined"){
-               cdc.search = new Object();
-            }
-            cdc.search.country = "US";
-            cdc.search.language = "en";
-          </script>
-          <!-- end search -->
-
-          <!-- toolbar -->
-          <div id="fw-ft-basic">
-            <div class="ft-toolbar">
-              <div class="ft-group ft-country-lang-group">
-                <div class="ft-sect ft-country"><a href="http://cisco.com/en/US/swassets/sw274/sitewide_country_language_selector.html" class="ft-label"><span class="ft-country-name">Worldwide</span> <span class="ft-country-change">[change]</span></a></div>
-              </div>
-              <div class="ft-group ft-guest-group">
-                <div class="ft-sect ft-login"><a href="http://www.cisco.com/cgi-bin/login" class="ft-label">Log In</a></div>
-                <div class="ft-sect ft-account"><a href="http://www.cisco.com/web/siteassets/account/index.html" class="ft-label">Account</a></div>
-                <div class="ft-sect ft-register"><a href="http://tools.cisco.com/RPF/register/register.do" class="ft-label">Register</a></div>
-                <div class="ft-sect"><a href="http://www.cisco.com/cisco/psn/web/workspace" class="ft-label">My Cisco</a></div>
-              </div>
-            </div>
-          </div>
-          <!-- end toolbar -->
-
-
-        </div><!-- end #fw-banner-w1 -->
-      </div><!-- end #fw-banner -->
-      <!-- end: masterbrand banner -->
-    </div><!-- end #fw-mb-w1 -->
-  </div><!-- end #fw-mb -->
+  <body>
 
   <div id="scenarios" class="scenarios">
     <nav>
@@ -535,14 +454,6 @@
     <script src="scripts/fixedScroll.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
-    <script>
-      $(function() {
-        cbpFixedScrollLayout.init();
-      });
-    </script>
-
-    <!--Metrics-->
-    <script type="text/javascript" src="//www.cisco.com/web/fw/m/metrics.min.js"></script>
 
 </body>
 </html>
